CHANGES
-------

Week 1 (Partial)

 - Fresh top-level views using only SwiftUI layout primitives to prevent recurrent bugs (no more AppKit views)
 - Re-designed viewer area, toolbar, navigator, inspector, status bar
 - Show/hide navigator with animation from the toolbar
 - New open button with extended functionality (display and clear folder)
 - Pick active image for viewing (single selection) or mark images for processing (multiple selection)
 - New inspector tabs implementation
 - New coordinate system for viewer
 - New internal annotation representation (closer to CoreML API)
 - Re-imagined synthetics container panel and new modal dialog architecture
 - Better status, help and empty-state messages
 - Smooth image viewer and visual annotation manipulation (fixed severe performance issue)
 - Support for re-positioning annotations (drag-and-drop)

Week 2 (On-going)

 - Launch state improved with hidden/disabled controls and call to action
 - Filters overhauled to handle chaining and arbitrary combinations
 - Synthetic generation now non-blocking, allows user to keep interacting with main app window
 - Synthetics progress report improved and moved to the status bar
 - Separated filters (scale, rotate,…) from inside the background filter implementation
 - Migrated more filters (noise, emboss)
 - Refreshed the synthetics modal to reflect the available filters
 - Enabled new filter combinations
 - Initial keyboard support