@@ -43,6 +43,7 @@
 		62917DF624AF76EF00D258F4 /* ViewerPanel.swift in Sources */ = {isa = PBXBuildFile; fileRef = 62917DF524AF76EF00D258F4 /* ViewerPanel.swift */; };
 		62917DF824B3436300D258F4 /* WorkingFolderIndicator.swift in Sources */ = {isa = PBXBuildFile; fileRef = 62917DF724B3436300D258F4 /* WorkingFolderIndicator.swift */; };
 		62917DFA24B367F800D258F4 /* AppData+generateSynthetics.swift in Sources */ = {isa = PBXBuildFile; fileRef = 62917DF924B367F800D258F4 /* AppData+generateSynthetics.swift */; };
+		62B329E224B77B0E007326CB /* SyntheticsSettings.swift in Sources */ = {isa = PBXBuildFile; fileRef = 62B329E124B77B0E007326CB /* SyntheticsSettings.swift */; };
 /* End PBXBuildFile section */
 
 /* Begin PBXFileReference section */
@@ -85,6 +86,7 @@
 		62917DF524AF76EF00D258F4 /* ViewerPanel.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = ViewerPanel.swift; sourceTree = "<group>"; };
 		62917DF724B3436300D258F4 /* WorkingFolderIndicator.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = WorkingFolderIndicator.swift; sourceTree = "<group>"; };
 		62917DF924B367F800D258F4 /* AppData+generateSynthetics.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = "AppData+generateSynthetics.swift"; sourceTree = "<group>"; };
+		62B329E124B77B0E007326CB /* SyntheticsSettings.swift */ = {isa = PBXFileReference; lastKnownFileType = sourcecode.swift; path = SyntheticsSettings.swift; sourceTree = "<group>"; };
 /* End PBXFileReference section */
 
 /* Begin PBXFrameworksBuildPhase section */
@@ -162,6 +164,7 @@
 				62917DF924B367F800D258F4 /* AppData+generateSynthetics.swift */,
 				620D3DED24ACE5F500A26F9A /* NavigationState.swift */,
 				622284D224B61CE2003F98AF /* SyntheticsProcessor.swift */,
+				62B329E124B77B0E007326CB /* SyntheticsSettings.swift */,
 				622284D024B61C5F003F98AF /* SyntheticsTask.swift */,
 			);
 			path = Model;
@@ -277,6 +280,7 @@
 				620D3DF224ACE6E500A26F9A /* Toolbar.swift in Sources */,
 				622284D724B636FB003F98AF /* KeyboardHandler.swift in Sources */,
 				62917DF624AF76EF00D258F4 /* ViewerPanel.swift in Sources */,
+				62B329E224B77B0E007326CB /* SyntheticsSettings.swift in Sources */,
 				627461A524AE1D59003485E7 /* ImageSizePrefKey.swift in Sources */,
 				620D3DF424ACEAAB00A26F9A /* OpenButton.swift in Sources */,
 				6274619F24ADF513003485E7 /* ImageInspector.swift in Sources */,
