@@ -1,0 +1,14 @@
+//
+//  SyntheticsSettings.swift
+//  VisioAnnotate
+//
+//  Created by dl on 2020-07-01.
+//  Copyright © 2020 Gaspard+Bruno. All rights reserved.
+//
+import Foundation
+
+struct SyntheticsSettings {
+
+  var markedOnly = false
+  var backgrounds: URL?
+}
