@@ -4,6 +4,7 @@ import CoreImage
 class SyntheticsTask {
 
   let source: AnnotatedImage
+  let settings: SyntheticsSettings
   let operations: [Operation]
   let resultUrl: URL
 
@@ -14,14 +15,16 @@ class SyntheticsTask {
     case flip
     case scale
     case rotate
+    case background
     case blur
     case monochrome
     case emboss
     case noise
   }
   
-  init(annotatedImage: AnnotatedImage, operations: [Operation]) {
+  init(annotatedImage: AnnotatedImage, settings: SyntheticsSettings, operations: [Operation]) {
     self.source = annotatedImage
+    self.settings = settings
     self.operations = operations
     self.resultUrl = annotatedImage.url
       .deletingPathExtension()
@@ -70,6 +73,53 @@ class SyntheticsTask {
         .reframe(source: originalExtent, target: resultImage.extent)
         .flipCoordSystem(container: resultImage.extent)
         .bottomLeftToCenterCoords
+      return Annotation(label: annotation.label, coordinates: newCoords)
+    }
+  }
+
+  func applyBackground() {
+
+    guard let backgroundsUrl = settings.backgrounds else {
+      // FIXME: this produces a copy of the original image with no background, better just skip this entire filter
+      return
+    }
+
+    let backgroundUrls = try! FileManager.default.contentsOfDirectory(at: backgroundsUrl, includingPropertiesForKeys: [.isRegularFileKey], options: [.skipsHiddenFiles]).filter { $0.path.lowercased().hasSuffix(".png") }
+    let backgroundUrl = backgroundUrls[Int.random(in: 0 ..< backgroundUrls.count)]
+
+    var bgImage = CIImage(contentsOf: backgroundUrl)!
+        
+    // If background doesn't fit, we scale it up
+    let imageSize = resultImage.extent.size
+    var bgSize = bgImage.extent.size
+    if imageSize.width > bgSize.width || imageSize.height > bgSize.height {
+      let bgScaleX: CGFloat
+      let bgScaleY: CGFloat
+      if imageSize.width > bgSize.width {
+        bgScaleX = imageSize.width / bgSize.width
+      } else {
+        bgScaleX = 1
+      }
+      if imageSize.height > bgSize.height {
+        bgScaleY = imageSize.height / bgSize.height
+      } else {
+        bgScaleY = 1
+      }
+      bgImage = bgImage.transformed(by: CGAffineTransform(scaleX: bgScaleX, y: bgScaleY))
+      bgSize = bgImage.extent.size
+    }
+
+    let upBoundX = bgSize.width - imageSize.width
+    let upBoundY = bgSize.height - imageSize.height
+    let randomX = CGFloat.random(in: 0 ... upBoundX)
+    let randomY = CGFloat.random(in: 0 ... upBoundY)
+
+    let translateTransform = CGAffineTransform(translationX: randomX, y: randomY)
+    resultImage = resultImage.transformed(by: translateTransform).composited(over: bgImage)
+
+    resultAnnotations = resultAnnotations.map { (annotation: Annotation) in
+      let newCoords = annotation.coordinates
+        .applying(translateTransform)
       return Annotation(label: annotation.label, coordinates: newCoords)
     }
   }
@@ -179,6 +229,8 @@ class SyntheticsTask {
         applyScale()
       case .rotate:
         applyRotation()
+      case .background:
+        applyBackground()
       case .blur:
         applyBlur()
       case .monochrome:
