@@ -10,33 +10,77 @@ import SwiftUI
 
 struct SyntheticsModal: View {
 
+  @Binding var settings: SyntheticsSettings
   @ObservedObject var appData = AppData.shared
   
   @State var selectionOnly = false
+  
+  var count: Int {
+    selectionOnly
+    ? appData.annotatedImages.marked.count
+    : appData.annotatedImages.count
+  }
 
   var body: some View {
     VStack {
       Text("Synthetic image generator")
-      Form {
-        Toggle("Apply to selected images only", isOn: $selectionOnly)
-        Section(header: Text("Geometric Filters")) {
-          Toggle("Flip", isOn: .constant(true))
-          Toggle("Scale", isOn: .constant(true))
-          Toggle("Rotate", isOn: .constant(true))
+      ScrollView {
+        VStack {
+          Form {
+          
+            Section(
+              header: Text("Selection"),
+              footer: Text("Will apply to \(count) objets")
+            ) {
+              Toggle("Apply to marked images only", isOn: $selectionOnly)
+            }
+            Divider()
+
+            Section(
+              header: Text("Backgrounds")
+            ) {
+              Button("Select folder…") {
+                let panel = NSOpenPanel()
+                panel.canChooseFiles = false
+                panel.canChooseDirectories = true
+                panel.resolvesAliases = true
+                panel.allowsMultipleSelection = false
+                panel.isAccessoryViewDisclosed = false
+                let result = panel.runModal()
+                guard result == .OK, let url = panel.url else {
+                  return
+                }
+                self.settings.backgrounds = url
+              }
+              if settings.backgrounds == nil {
+                Text("-")
+              } else {
+                Text("\(settings.backgrounds!.path)")
+              }
+              Toggle("Select background randomly", isOn: .constant(true))
+            }
+
+            Section(header: Text("Geometric Filters")) {
+              Toggle("Flip", isOn: .constant(true))
+              Toggle("Scale", isOn: .constant(true))
+              Toggle("Rotate", isOn: .constant(true))
+            }
+            Section(header: Text("Effects")) {
+              Toggle("Gaussian Blur", isOn: .constant(true))
+              Toggle("Color Monochrome", isOn: .constant(true))
+              Toggle("Emboss", isOn: .constant(true))
+              Toggle("Noise", isOn: .constant(true))
+            }
+            Section(header: Text("Options")) {
+              Toggle("Combine multiple filters", isOn: .constant(true))
+              Toggle("Randomize parameters multiple times", isOn: .constant(true))
+            }
+            .environment(\.isEnabled, false)
+          }
+          Spacer()
         }
-        Section(header: Text("Effects")) {
-          Toggle("Gaussian Blur", isOn: .constant(true))
-          Toggle("Color Monochrome", isOn: .constant(true))
-          Toggle("Emboss", isOn: .constant(true))
-          Toggle("Noise", isOn: .constant(true))
-        }
-        Section(header: Text("Options")) {
-          Toggle("Combine multiple filters", isOn: .constant(true))
-          Toggle("Randomize parameters multiple times", isOn: .constant(true))
-        }
-        .environment(\.isEnabled, false)
+        .frame(maxWidth: .infinity)
       }
-      Spacer()
       HStack {
         Spacer()
         Button("Generate") {
@@ -55,7 +99,7 @@ struct SyntheticsModal: View {
       }
     }
     .padding()
-    .frame(minWidth: 200, maxWidth: 300, minHeight: 200, maxHeight: 400)
+    .frame(minWidth: 300, maxWidth: 600, minHeight: 300, maxHeight: 600)
     .background(Color(NSColor.windowBackgroundColor))
     .border(Color(NSColor.separatorColor), width: 1)
     .padding([.horizontal, .bottom])
@@ -64,6 +108,6 @@ struct SyntheticsModal: View {
 
 struct SyntheticsModal_Previews: PreviewProvider {
   static var previews: some View {
-    SyntheticsModal()
+    SyntheticsModal(settings: .constant(SyntheticsSettings()))
   }
 }
